# systemd-client

./: .gitignore  Makefile.am  balabit-unix-build  configure.ac  libsystemd-daemon.pc.in  sd-daemon.c  systemd-client.c
debian/: changelog  control  rules
pe-build/: build
pe-build/pkg-desc/: libsystemd-client-dev.files  libsystemd-client.files
sbuild/: config.yml
tgz2build/: libsystemd-client-dev.files  libsystemd-client.files  rules
